Revision history for Graphics-ColorNames-Netscape:

{{$NEXT}}
  [Documentation]
  - Fix typo in Changes.

v3.1.1    2018-09-30 14:46:12+01:00 Europe/London
  [Other]
  - Changed licence to Creative Commons.

v3.1.0    2018-09-30 13:24:34+01:00 Europe/London
  [Incompatabilities]
  - Split into separate distribution from Graphics-ColorNames

  [Documentation]
  - Use archive.org link to original web page.

  - Updated contributor names.