@@ -1,9 +1,13 @@
 requires "perl" => "v5.6.0";
+recommends "Graphics::ColorNames" => "0";
 
 on 'test' => sub {
   requires "File::Spec" => "0";
   requires "Module::Metadata" => "0";
   requires "Test::More" => "0";
+  requires "Test::Most" => "0";
+  requires "Types::Common::Numeric" => "1.004";
+  requires "Types::Standard" => "0";
 };
 
 on 'test' => sub {
