@@ -12,6 +12,7 @@ keyword = deprecated
 [Meta::Contributors]
 contributor = Magnus Cedergren <magnus@mbox604.swipnet.se>
 contributor = Gary Vollink <gary@vollink.com>
+contributor = Slaven Rezić <slaven@rezic.de>
 
 [GatherDir]
 exclude_match = cpanfile*
@@ -68,6 +69,7 @@ x_authority    = cpan:RRWO
 [Prereqs]
 
 [Prereqs / TestRequires ]
+Types::Common::Numeric = 1.004
 
 ; authordep Pod::Weaver::Plugin::AppendPrepend
 ; authordep Pod::Weaver::Section::Contributors
